--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^22.10.1",
+    "dayjs": "^1.11.13",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
