--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^22.10.1",
     "dayjs": "^1.11.13",
     "typescript": "^5.7.2",
+    "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.8"
   }
 }
