--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint src --ext .ts",
+    "lint:fix": "eslint src --ext .ts --fix",
     "test": "vitest run",
     "test:watch": "vitest"
   },
@@ -11,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.10.1",
     "dayjs": "^1.11.13",
+    "eslint": "^8.57.1",
+    "eslint-plugin-vitest-globals": "^1.5.0",
     "typescript": "^5.7.2",
     "vite-tsconfig-paths": "^5.1.3",
     "vitest": "^2.1.8"
