--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/node": "^22.10.1",
     "dayjs": "^1.11.13",
