--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,5 +6,9 @@
   "env": {
     "vitest-globals/env": true
   },
-  "rules": { "no-useless-constructor": "off" }
+  "rules": { 
+    "no-useless-constructor": "off", 
+    "@typescript-eslint/no-explicit-any": "off", 
+    "@typescript-eslint/ban-types": "off"
+  }
 }
