--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
   },
   "rules": { 
     "no-useless-constructor": "off", 
+    "no-new": "off",
     "@typescript-eslint/no-explicit-any": "off", 
     "@typescript-eslint/ban-types": "off"
   }
